# zhimo

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.trae/documents/: #2-PDF-Word解析-剩余实施计划.md  #2-PDF-Word解析-阶段4集成验收计划.md  #2-PDF-Word解析实施计划.md  B类轻量五项-阶段4-5实施计划.md  B类轻量五项功能补齐规划.md  agent-project-module-tools.md  fix-agent-outline-hierarchy-and-status.md  project_onboarding_plan.md  主流Agent上下文压缩策略研究报告.md  小说项目隐藏论文检查并增加拼写检查.md  技术债.md  模型配置优化与上下文自动压缩计划.md  知识库按需调研_阶段5_版本管理激活实施计划.md  知识库按需调研实施计划.md  记忆管理功能实现计划.md  论文写作功能剩余工作实施计划_v3.md  论文写作功能剩余工作实施计划_v4.md  论文写作功能实施执行计划_v2.md  论文写作功能实施计划.md  论文写作功能实现计划.md  论文写作功能收尾实施计划-续.md  论文写作功能收尾实施计划.md  项目从外部文档导入-剩余实施计划.md  项目从外部文档导入方案.md  项目核心流程缺陷修复与工程质量建设规划.md
ai_writing_development_startup_package_v1_0/: README.md  pi-agent-design-guide.md  待优化项.md
ai_writing_development_startup_package_v1_0/00_总览/: 00_项目开发基线.md  01_文件清单.md  02_开发启动包_v1.0_补齐说明.md  99_文件清单.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_model_context_length.sql  003_add_context_pack_entries.sql  004_add_agent_memories.sql  005_paper_writing.sql  006_relax_export_format_check.sql  007_agent_pending_actions.sql  008_agent_thread_states.sql  009_add_txt_export_format.sql
src-tauri/src/: db.rs  lib.rs  main.rs  secret.rs
src-tauri/src/source_parser/: docx.rs  markdown.rs  mod.rs  pdf.rs  structured.rs  types.rs
(+292 files in other folders)
